Tue Jan  2 02:02:35 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.8, al175.8: fixed broken name section ("\(hy" instead of "\-")
   as detected by doclifter (http://catb.org/~esr/doclifter/)

Fri Dec 29 21:16:39 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c, include/state.h: fixes list corruption in state_delcmd(),
   use functions from common where possible
 - drivers/dstate.c: use functions from common where possible
 - server/sstate.c: add ups.status placeholder, allow for one failed poll
   before declaring driver stale, use functions from common where possible
 - server/upsd.c: remove initial_dump_wait(), reconnect to socket before
   declaring driver stale

Tue Dec 19 12:02:14 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - include/version*: bump to 2.0.5-pre1, as it should have been.
 - NEWS: add some blank lines

Tue Dec 19 14:11:36 UTC 2006 / Charles Lepple <clepple@gmail.com>

 - Removed 'Doxyfile' that was specific to tripplite_usb.

Tue Dec 19 03:13:34 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: backported version 1.5 from the trunk
 - driver.list: esupssmart, blazer, fentonups, mustek, ippon and sms entries
   replaced by megatec
 - Added a notice about megatec on both the drivers obsoleted by it and their
   respective manpages.

Mon Dec 18 17:29:53 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: renamed '-x generic' option as '-x explore'

Mon Dec 18 16:03:02 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - include/version*: bump to 2.0.5

Thu Dec 14 19:16:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: added two model numbers for the "belkin" driver. 

Thu Dec 14 19:00:30 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - bcmxcp.c: fixed "&&" vs. "&" issue (bug 304249, reported by Arjen de Korte).

Sat Dec  9 01:36:14 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
